# sieve

./: .gitignore  Cargo.toml  PROJECT.md  README.md
docs/: SPEC.md
src/: analyze.rs  cli.rs  conventions.rs  detect.rs  diff.rs  history.rs  imports.rs  main.rs  report.rs
tests/: cli_recommendations.rs
