[package]
name = "sieve"
version = "0.1.0"
edition = "2021"
description = "Test impact analyzer — recommends minimal test sets from git diffs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
